kubernetes/system/harbor/manifests/ingressroute.yaml
관apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`harbor.seung.site`) && PathPrefix(`/v2/`)
      middlewares:
        - name: harbor-headers
      services:
        - name: harbor-core
          port: 80
    - kind: Rule
      match: Host(`harbor.seung.site`) && PathPrefix(`/api/`)
      middlewares:
        - name: harbor-headers
      services:
        - name: harbor-core
          port: 80
    - kind: Rule
      match: Host(`harbor.seung.site`) && PathPrefix(`/service/`)
      middlewares:
        - name: harbor-headers
      services:
        - name: harbor-core
          port: 80
    - kind: Rule
      match: Host(`harbor.seung.site`) && PathPrefix(`/c/`)
      middlewares:
        - name: harbor-headers
      services:
        - name: harbor-core
          port: 80
    - kind: Rule
      match: Host(`harbor.seung.site`)
      middlewares:
        - name: harbor-headers
      services:
        - name: harbor-portal
          port: 80
